fixes x-overflow

--- a/src/components/content_container/styles.module.css
+++ b/src/components/content_container/styles.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    flex-direction: column;
 }
 
 .contentContainer {
@@ -12,3 +13,4 @@
     flex-direction: column;
     align-items: center;
 }
+
