--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,18 @@
 html {
     scroll-behavior: smooth;
     background-color: #ECE0D5;
-    overflow-x: hidden;
 }
 
 body {
     margin: unset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%
+}
+
+#__next {
+    width: 100%;
+    height: 100%;
 }
